# gps-helper

./: README.md  pyproject.toml
src/gps_helper/: __init__.py  align.py  cli.py  gpx_io.py  http.py  model.py  simplify.py
src/gps_helper/backends/: __init__.py  base.py  osrm.py  valhalla.py
tests/: test_align.py  test_gpx_io.py  test_route.py  test_simplify.py  test_simplify_to_route.py  test_valhalla_parser.py
tests/fixtures/: valhalla_trace_attributes.json
