[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gps-helper"
version = "0.1.0"
description = "Snap GPS traces to OSM roads and simplify them by keeping only points near road changes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "gps-helper contributors" }]
dependencies = [
    "gpxpy>=1.6",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
gps-helper = "gps_helper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
